# nzshm-documentation

./: README.md  mkdocs.yml  mkdocs_dmp.yml  pyproject.toml
.github/workflows/: publish.yml
docs/: diagrams.md  index.md  introduction.md
docs/architecture/: api_gateway_deployments.md  api_gateway_pattern.md  common_infrastructure.md  index.md  intro.md  kororaa_deployment_stack.md  services.md  weka_deployment_stack.md
docs/architecture/data_mgmnt_plan/: 1_data_collection.md  2_docs_and_meta.md  3_ethics_and_legal.md  4_storage_and_backup.md  5_selection_and_preservation.md  6_data_sharing.md  7_responsibilities_and_resources.md  index.md
docs/architecture/kororaa/: aws_api_deployment.md
docs/component_index/: solvis_graphql_api.md
docs/components/: index.md  kororaa.md  nshm_kororaa_apigw.md  nshm_model_graphql_api.md  nshm_toshi_api.md  nshm_weka_apigw.md  nzshm_common_py.md  nzshm_model.md  solvis.md  solvis_graphql_api.md  toshi_hazard_store.md  weka.md
docs/components/kororaa/: aws_api_deployment.md  index.md
docs/components/kororaa_old/: aws_api_deployment.md  aws_app_deployment.md
docs/domain_model/: hazard_realisation_model.md  index.md  relational.md  seismic_hazard_model.md
docs/guidelines/: api_devops_training.md  index.md  react_project_guide.md  service_deployment_guide.md
docs/reports_and_presentations/: index.md
docs/science_process/: disaggs.md  discussion.md  hazard.md  index.md  intro.md  process_maps.md  related.md  relational.md  toshi_schema.md
docs/science_process/hazard/: disagg_aggregations.md  disagg_realisations.md  (+3 more)
