[tool.poetry]
name = "nzshm-documentation"
version = "0.1.0"
description = "mkdocs documentation package for NSHM"
authors = ["NSHM Project <nshm@gns.cri.nz>"]
license = "AGPL"
readme = "README.md"
# packages = [{include = "nzshm_documentation"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.3"
mkdocs-include-markdown-plugin = "^3.0.0"
mkdocs-material = "^9.1.19"
mkdocs-material-extensions = "^1.1.1"
#mkdocs-pymdownx-material-extras = "@latest"
#mkdocstrings= "@latest"
#mkdocstrings-python= "@latest"
mkdocstrings = "^0.22.0"
mkdocstrings-python = "^1.2.1"
mkdocs-mermaid2-plugin = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
