[tool.poetry]
name = "nzshm-documentation"
version = "0.1.0"
description = "mkdocs documentation package for NSHM"
authors = ["NSHM Project <nshm@gns.cri.nz>"]
license = "AGPL"
readme = "README.md"
# packages = [{include = "nzshm_documentation"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.3"
mkdocs-include-markdown-plugin = "^3.0.0"
mkdocs-material-extensions = "^1.1.1"
mkdocstrings = "^0.22.0"
mkdocstrings-python = "^1.2.1"
mkdocs-pymdownx-material-extras = "^2.4.3"

#mkdocstrings= "@latest"
#mkdocstrings-python= "@latest"
mkdocs-with-pdf = "^0.9.3"
mkdocs-material = "^9.4.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
